# HexBox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  teaser.png.REMOVED.git-id  tutorials.md  videos.md
core/: CMakeLists.txt
core/include/HMP/: Commander.hpp  Project.hpp
core/include/HMP/Actions/: Delete.hpp  DeleteSome.hpp  Extrude.hpp  ExtrudeUtils.hpp  FitCircle.hpp  MakeConforming.hpp  Pad.hpp  Paste.hpp  Project.hpp  Refine.hpp  RefineSome.hpp  Root.hpp  Smooth.hpp  SplitPlane.hpp  SubdivideAll.hpp  Transform.hpp
core/include/HMP/Dag/: Delete.hpp  Element.hpp  Extrude.hpp  Node.hpp  Node.tpp  NodeHandle.hpp  NodeHandle.tpp  NodeSet.hpp  NodeSet.tpp  Operation.hpp  Refine.hpp  Utils.hpp
core/include/HMP/Meshing/: Mesher.hpp  Utils.hpp  Utils.tpp  types.hpp
core/include/HMP/Projection/: Match.hpp  Utils.hpp  Utils.tpp  altProject.hpp  fill.hpp  jacobianAdvance.hpp  percentileAdvance.hpp  project.hpp  smooth.hpp
core/include/HMP/Refinement/: Scheme.hpp  Schemes.hpp  Sub3x3AdapterCandidate.hpp  Sub3x3AdapterCandidateSet.hpp  Utils.hpp
core/include/HMP/Utils/: DerefRanged.hpp  MapRanged.hpp  Serialization.hpp
core/src/: Commander.cpp  Project.cpp
core/src/Actions/: Delete.cpp  DeleteSome.cpp  Extrude.cpp  ExtrudeUtils.cpp  FitCircle.cpp  MakeConforming.cpp  Pad.cpp  Paste.cpp  Project.cpp  Refine.cpp  RefineSome.cpp  Root.cpp  Smooth.cpp  SplitPlane.cpp  SubdivideAll.cpp  Transform.cpp
core/src/Dag/: Delete.cpp  Element.cpp  Extrude.cpp  Node.cpp  NodeSet.cpp  Operation.cpp  Refine.cpp  Utils.cpp
core/src/Meshing/: Mesher.cpp  Utils.cpp
core/src/Projection/: Match.cpp  Utils.cpp  altProject.cpp  fill.cpp  jacobianAdvance.cpp  percentileAdvance.cpp  project.cpp  smooth.cpp
core/src/Refinement/: Scheme.cpp  Schemes.cpp  Sub3x3AdapterCandidate.cpp  Sub3x3AdapterCandidateSet.cpp  Utils.cpp
core/src/Utils/: Serialization.cpp
gui/: CMakeLists.txt
gui/include/HMP/Gui/: App.hpp  SidebarWidget.hpp  Widget.hpp  themer.hpp
gui/include/HMP/Gui/DagViewer/: Layout.hpp  Widget.hpp  createLayout.hpp
gui/include/HMP/Gui/Utils/: Controls.hpp  Controls.tpp  Drawing.hpp  FilePicking.hpp  HrDescriptions.hpp  Theme.hpp  Themer.hpp  Transform.hpp
gui/include/HMP/Gui/Widgets/: Actions.hpp  Ae3d2ShapeExporter.hpp  Axes.hpp  Commander.hpp  Debug.hpp  DirectVertEdit.hpp  Highlight.hpp  Pad.hpp  Projection.hpp  Projection.tpp  Save.hpp  Smooth.hpp  Target.hpp  VertEdit.hpp
gui/src/: App.cpp  SidebarWidget.cpp  Widget.cpp  main.cpp  themer.cpp
gui/src/DagViewer/: Layout.cpp  Widget.cpp  createLayout.cpp
gui/src/Utils/: Controls.cpp  Drawing.cpp  FilePicking.cpp  HrDescriptions.cpp  Theme.cpp  Themer.cpp  Transform.cpp
gui/src/Widgets/: Actions.cpp  Ae3d2ShapeExporter.cpp  Axes.cpp  Commander.cpp  Debug.cpp  DirectVertEdit.cpp  Highlight.cpp  Pad.cpp  Projection.cpp  Save.cpp  Smooth.cpp  Target.cpp  VertEdit.cpp
models/Fig1/: Cow.mesh
models/Fig12/: CAD10.mesh  CAD11.mesh  CAD2.mesh  CAD3.mesh  CAD4.mesh  CAD6.mesh  CAD9.mesh  Cogwheel2.mesh  Curve.mesh  Cylinders1.mesh  Rocket.mesh
models/Fig13/: Block.mesh  CAD1.mesh  CAD5.mesh  CAD7.mesh  CAD8.mesh  Cactus.mesh  Cylinders2.mesh  Ghost.mesh  Indorelax.mesh  Knob.mesh  Torus.mesh  Vertebra.mesh
models/Fig14/: Hollow-sphere.mesh  Tic-tac-toe.mesh
models/Fig15/: SGP.mesh
models/Fig17/: Cogwheel1.mesh
models/Fig2/: hole.mesh  twisting.mesh  val11.mesh  val3.mesh  val5.mesh
schemes/: adapter2FacesSubdivide3x3.rse  adapterEdgeSubdivide3x3.rse  adapterFaceSubdivide3x3.rse  inset.rse  planeSplit  subdivide2x2.rse  subdivide3x3.rse
videos/: Cow.mp4.REMOVED.git-id  videos.md
